--- a/cronometro.css
+++ b/cronometro.css
@@ -2,9 +2,10 @@ body {
     background-color: rgb(132, 0, 255);
     background-image: linear-gradient( to left,rgb(98, 0, 255) ,rgb(174, 0, 255));
 }
-
+header{
+    height: 250px;
+}
 section {
-    padding-top: 250px;
     text-align: center;
     font: normal 15pt monospace;
     color: white;
