--- a/cronometro.css
+++ b/cronometro.css
@@ -62,6 +62,13 @@ button {
 }
 
 #about {
+    margin: 0 auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: transparent;
+    border:solid white;
+    color: white;
+    font-weight: 600;
+    transition: 200ms;
     position: relative;
     margin-left: auto;
     margin-right: auto;
