--- a/cronometro.css
+++ b/cronometro.css
@@ -7,7 +7,11 @@
 body {
     background-image: linear-gradient(45deg, #1707c4, #4800ad, #840cd3, #5f07c4);
     background-attachment: fixed;
+    font-family: 'Rubik', sans-serif;
     color: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     text-align: center;
     background-size: 600% 600%;
     -webkit-animation: GradientAnimation 20s ease infinite;
@@ -17,7 +21,6 @@ body {
 
 main {
     margin: auto;
-    margin-top: calc(50vh - 100px);
     width: fit-content;
 }
 
@@ -32,7 +35,6 @@ main {
 }
 
 .botoes {
-    font-family: 'Rubik', sans-serif;
     color: white;
     font-size: 30px;
     background: none;
@@ -60,6 +62,22 @@ main {
     border-color: #04ff3a;
     color: #00ff37;
     cursor: auto;
+}
+
+footer {
+    padding: 10px;
+}
+
+footer a {
+    color: white;
+    transition: 200ms;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: #242323;
 }
 
 /*Animacão do fundo*/
